@@ -1,20 +1,23 @@
 package org.jboss.fuse.tnb.customizer.datasource;
 
-import org.jboss.fuse.tnb.product.ck.generated.IntegrationSpec;
 import org.jboss.fuse.tnb.product.customizer.ProductsCustomizer;
 import org.jboss.fuse.tnb.product.integration.IntegrationSpecCustomizer;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+
+import io.fabric8.camelk.v1.IntegrationSpecBuilder;
+import io.fabric8.camelk.v1.TraitSpec;
 
 public class DataSourceCustomizer extends ProductsCustomizer implements IntegrationSpecCustomizer {
 
@@ -78,14 +81,12 @@ public class DataSourceCustomizer extends ProductsCustomizer implements Integrat
     }
 
     @Override
-    public void customizeIntegration(IntegrationSpec integrationSpec) {
-        final IntegrationSpec.TraitConfig traitConfig = new IntegrationSpec.TraitConfig("properties",
-            Collections.singletonList("quarkus.datasource.db-kind=" + type)
-        );
-        if (integrationSpec.getTraits() == null) {
-            integrationSpec.setTraits(new HashMap<>());
+    public void customizeIntegration(IntegrationSpecBuilder integrationSpecBuilder) {
+        TraitSpec builderSpec = new TraitSpec(new ObjectMapper().valueToTree(Map.of("properties", List.of("quarkus.datasource.db-kind=" + type))));
+        if (integrationSpecBuilder.getTraits() == null) {
+            integrationSpecBuilder.withTraits(new HashMap<>());
         }
-        integrationSpec.getTraits().put("builder", traitConfig);
+        integrationSpecBuilder.addToTraits("builder", builderSpec);
     }
 
     private String[] getDbAllocatorDependencies() {
